[package]
name = "poc-aya-log-bug-5-4-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
aya-bpf = { git = "https://github.com/aya-rs/aya", branch = "main" }
aya-log-ebpf = { git = "https://github.com/aya-rs/aya", branch = "main" }
poc-aya-log-bug-5-4-common = { path = "../poc-aya-log-bug-5-4-common" }

[[bin]]
name = "poc-aya-log-bug-5-4"
path = "src/main.rs"

[profile.dev]
opt-level = 3
debug = true
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1
rpath = false

[profile.release]
lto = true
debug = true
panic = "abort"
codegen-units = 1

[workspace]
members = []
