[package]
name = "poc-aya-log-bug-5-4"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]

aya = { git = "https://github.com/aya-rs/aya", branch = "main", features = [
    "async_tokio",
] }
# part of tokio framework
bytes = "1"
futures = "0.3"

aya-log = { git = "https://github.com/aya-rs/aya", branch = "main" }
aya-obj = { git = "https://github.com/aya-rs/aya", branch = "main" }

poc-aya-log-bug-5-4-common = { path = "../poc-aya-log-bug-5-4-common", features = [
    "user",
] }
anyhow = "1"
env_logger = "0.10"
log = "0.4"
tokio = { version = "1.25", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "net",
    "signal",
] }

[[bin]]
name = "poc-aya-log-bug-5-4"
path = "src/main.rs"
